--- a/style.css
+++ b/style.css
@@ -4,22 +4,77 @@ body
     color: #777;
     background: #777;
     width: 960px;
+    margin: auto;
     font-size: 18px;
+    text-align: center;
+
 }
 
-header, nav, section, aside, footer 
+.header
 {
     background: #ebebeb;
+    padding: 40px 0px 40px 0px;
+    margin: 10px 0px 10px 0px;
 }
 
-article
+.nav
+{
+    background: #ebebeb;
+    padding: 40px 0px 40px 0px;
+    margin: 10px 0px 10px 0px;
+}
+
+.section
+{
+    background: #ebebeb;
+    width: 495px;
+    float: left;
+    height: 240px;
+    padding: 30px 0px 0px 0px;
+    margin: 10px 10px 10px 0px;
+}
+
+.aside
+{
+    background: #ebebeb;
+    float: left;
+    height: 240px;
+    padding: 30px 0px 0px 0px;
+    margin: 10px 0px 10px 10px;
+    width: 445px;
+}
+
+.footer 
+{
+    background: #ebebeb;
+    padding: 40px 0px 40px 0px;
+    margin: 10px 0px 10px 0px;
+    float: left;
+    width: 100%;
+}
+
+#article
 {
     color: #ebebeb;
     background: #777;
+    padding: 20px 0px 40px 0px;;
+    margin: 20px 10px 10px 10px;
+    height: 130px;
 }
 
-h1, p
+#h1
 {
     color: #777;
-    background: #
+    background: #ebebeb;
+    padding: 15px 0px 15px 0px;
+    margin: 10px 20px 10px 20px;
+    font-size: 20px;
+}
+
+#p
+{
+    color: #777;
+    background: #ebebeb;
+    padding: 16px 0px 16px 0px;
+    margin: 10px 20px 10px 20px;
 }
